--- a/wp-content/themes/rethink-event/sass/04-pages/_single-session.scss
+++ b/wp-content/themes/rethink-event/sass/04-pages/_single-session.scss
@@ -38,6 +38,7 @@
 
 .pg-single-session__location {
   background-color: #fff;
+  @include colour-pick-text;
 }
 
 .pg-single-session__location-link {
