--- a/wp-content/themes/rethink-event/sass/05-template/_hero.scss
+++ b/wp-content/themes/rethink-event/sass/05-template/_hero.scss
@@ -73,8 +73,8 @@
 .t-hero__caption {
   position: absolute;
   bottom: -1px;
-  // right: 0;
-  left: 0;
+  right: 0;
+  // left: 0;
   background-color: rgba($black, 0.4);
   color: $white;
   padding: 15px;
