--- a/wp-content/themes/rethink-event/sass/00-base/_typography.scss
+++ b/wp-content/themes/rethink-event/sass/00-base/_typography.scss
@@ -136,6 +136,7 @@ ul {
 ol {
   list-style-position: inside;
   margin-bottom: 30px;
+  list-style-type: decimal;
 }
 
 .editor-styles-wrapper ul li,
