--- a/wp-content/themes/rethink-event/sass/style.scss
+++ b/wp-content/themes/rethink-event/sass/style.scss
@@ -24,6 +24,7 @@
 @import "02-blocks/programme-grid";
 @import "02-blocks/speakers-list";
 @import "02-blocks/youtube";
+@import "02-blocks/programme-global";
 
 @import "03-vendor/tiny-slider.scss";
 
