--- a/wp-content/themes/rethink-event/sass/02-blocks/_programme-global.scss
+++ b/wp-content/themes/rethink-event/sass/02-blocks/_programme-global.scss
@@ -79,26 +79,65 @@
 }
 
 .pro-global__buttons {
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // flex-wrap: wrap;
+  //
   margin-bottom: 30px;
 
   @media (min-width: $break-desktop) {
-    margin-left: 90px;
+    // margin-left: 90px;
+  }
+}
+
+.pro-global__buttons-title {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.pro-global__button-wrapper {
+  h3 {
+    margin-bottom: 10px;
+    margin-right: 20px;
+  }
+
+  display: none;
+
+  &--active {
+    display: block;
+    align-items: center;
+  }
+
+  @media (min-width: $break-desktop) {
+    padding-left: 84px;
+    h3 {
+      margin-bottom: 0;
+    }
+
+    &--active {
+      display: flex;
+    }
   }
 }
 
 .pro-global__button {
-  background-color: #fff;
   outline: 0;
-  padding: 10px;
-  margin-bottom: 8px;
+  // width: 40px;
+  padding: 10px 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // margin-bottom: 8px;
   margin-right: 3px;
   cursor: pointer;
   transition: cubic-bezier(0.445, 0.05, 0.55, 0.95);
-
-  &--active {
-    background-color: $green;
-    color: $white;
-  }
+  font-weight: 600;
+  font-size: 18px;
+  background-color: $yellow;
+  color: $black;
+  border: none;
 }
 
 .pro-global__day1,
@@ -258,6 +297,7 @@
 }
 
 .pro-global__track-slot {
+  text-decoration: none;
   font-weight: bold;
   font-size: 14px;
   display: none;
@@ -273,6 +313,10 @@
       @include colour-pick-text;
       color: white;
     }
+  }
+
+  &:hover {
+    filter: brightness(0.8);
   }
 }
 
