fix time start for all other theatres on Day2

--- a/wp-content/themes/rethink-event/sass/02-blocks/_programme-global.scss
+++ b/wp-content/themes/rethink-event/sass/02-blocks/_programme-global.scss
@@ -138,6 +138,11 @@
   background-color: $yellow;
   color: $black;
   border: none;
+  transition: 0.4s;
+  &:hover {
+    // opacity: 0.8;
+    filter: brightness(0.8);
+  }
 }
 
 .pro-global__day1,
