--- a/wp-content/themes/rethink-event/sass/02-blocks/_cta.scss
+++ b/wp-content/themes/rethink-event/sass/02-blocks/_cta.scss
@@ -26,6 +26,12 @@
     }
   }
 
+  text-decoration: none;
+  color: $white;
+  &:hover {
+    opacity: 0.6;
+  }
+
   &--green {
     background-color: $green;
     a {
@@ -40,4 +46,7 @@
       }
     }
   }
+
+  @include colour-pick;
+  @include colour-pick-text;
 }
