--- a/wp-content/themes/rethink-event/sass/05-template/_prev-next-btns.scss
+++ b/wp-content/themes/rethink-event/sass/05-template/_prev-next-btns.scss
@@ -1,25 +1,21 @@
 .c-prev-next-btns {
-  @extend .content-layout;
   display: flex;
-  position: absolute;
-  top: 100px;
-
   justify-content: space-between;
   align-items: center;
-  @media (min-width: $break-tablet) {
-    top: 150px;
-  }
-  // flex-wrap: wrap;
-  .b-cta {
-    margin: 0;
-    margin-bottom: 20px;
-    // font-size: 12px;
+  margin: 20px auto 0px;
+
+  width: 95%;
+  max-width: 900px;
+
+  @media (min-width: $break-desktop) {
+    margin: 70px auto 20px;
   }
 }
 
 .c-prev-next-btns__button {
   margin-right: 15px;
   .b-cta {
+    margin: 0;
     margin-bottom: 0;
   }
 
